tests/NormalTests/paczka1/fuzzy1/84142982.err
Error in line 3: EYdD S73 7,8
Error in line 10: qTsXpRmjHY A137 93,5
Error in line 1: S776 S73 51,5
Error in line 24: S776 A137 194,0
Error in line 28: 3FpJ S73 72,3
